--- a/courses/templates/courses/leaderboard.html
+++ b/courses/templates/courses/leaderboard.html
@@ -6,6 +6,17 @@
 
 {% block content %}
 
+  {% if current_student_enrollment %}
+  <div class="my-4">
+    <h2>Your Record</h2>
+    <div class="py-2">
+      <div>Your total score: {{ current_student_enrollment.total_score }} (Position: {{ current_student_enrollment.position_on_leaderboard }})</div>
+      <div>Display name: {{ current_student_enrollment.display_name }} (<a href="{% url 'enrollment' course.slug %}">change</a>)</div>
+      <div><a href="#record-{{ current_student_enrollment.id }}">Jump to your record on leaderboard</a></div>
+    </div>
+  </div>
+  {% endif %}
+
   <div class="row font-weight-bold py-2 mx-2">
     <div class="col-1">#</div>
     <div class="col-8">Name</div>
@@ -13,8 +24,8 @@
   </div>
 
   {% for enrollment in enrollments %}
-    <div class="row py-2 mx-2 {% cycle 'bg-light' 'bg-white' %} {% if enrollment.id == current_student_enrollment_id %}bg-info {% endif %}">
-      <div class="col-1">{{ forloop.counter }}</div>
+    <div id="record-{{ enrollment.id }}" class="row py-2 mx-2 {% cycle 'bg-light' 'bg-white' %} {% if enrollment.id == current_student_enrollment_id %}bg-info{% endif %}">
+      <div class="col-1">{{ enrollment.position_on_leaderboard }}</div>
       <div class="col-8">
         <a href="{% url 'leaderboard_score_breakdown' course_slug=course.slug enrollment_id=enrollment.id %}">
           {{ enrollment.display_name }}
