--- a/courses/templates/courses/leaderboard.html
+++ b/courses/templates/courses/leaderboard.html
@@ -10,7 +10,11 @@
   <div class="my-4">
     <h2>Your Record</h2>
     <div class="py-2">
-      <div>Your total score: {{ current_student_enrollment.total_score }} (Position: {{ current_student_enrollment.position_on_leaderboard }})</div>
+      <div>
+        <a href="{% url 'leaderboard_score_breakdown' course_slug=course.slug enrollment_id=current_student_enrollment.id %}">
+          Your total score: {{ current_student_enrollment.total_score }}
+        </a>
+        (Position: {{ current_student_enrollment.position_on_leaderboard }})</div>
       <div>Display name: {{ current_student_enrollment.display_name }} (<a href="{% url 'enrollment' course.slug %}">change</a>)</div>
       <div><a href="#record-{{ current_student_enrollment.id }}">Jump to your record on leaderboard</a></div>
     </div>
