template for peer reviewing list

--- a/courses/templates/projects/project.html
+++ b/courses/templates/projects/project.html
@@ -26,15 +26,19 @@
   {% endfor %}
 {% endif %}
 
-<!-- TODO! -->
 {% if disabled %}
   {% if submission %}
-    <div class="alert alert-success">
-      <p>This project is already scored. Your score is {{ submission.total_score }}.</p>
-    </div>
+    {% if project.state == 'PR' %}
+      <div class="alert alert-warning">
+        <p>The project is currently in the peer-reviewing phase.
+          <a href="{% url 'projects_eval' course.slug project.slug %}">Evaluate your peers here.</a> 
+          This form is no longer accepting modifications.
+        </p>
+      </div>
+    {% endif %}
   {% else %}
     <div class="alert alert-warning">
-      <p>This homework is already scored. You didn't submit your answers.</p>
+      <p>You didn't submit your project and this form is no longer accepting new submissions.</p>
     </div>
   {% endif %}
 {% endif %}
