--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -36,7 +36,7 @@
     <!-- Due date and days until deadline -->
     {% if not hw.is_scored %}
     <p>Due date: <span class="local-date">{{ hw.due_date |date:"c"}}</span> Local time</p>
-    <p>until deadline: <span class="until-deadline">{{ hw.days_until_due }}</span></p>
+    <p>Until deadline: <span class="until-deadline">{{ hw.days_until_due }}</span></p>
       {% if hw.days_until_due == 0 %}
         <p>The form is still accepting submissions.</p>
       {% endif %}
