--- a/courses/templates/homework/homework.html
+++ b/courses/templates/homework/homework.html
@@ -46,7 +46,7 @@
 
   <div>
     <p>Due date: <span class="local-date">{{ homework.due_date |date:"c"}}</span> Local time</p>
-    <p>until deadline: <span class="until-deadline">{{ homework.days_until_due }}</span></p>
+    <p>Until deadline: <span class="until-deadline">{{ homework.days_until_due }}</span></p>
   </div>
 
   {% if not is_authenticated %}
