--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-  <header class="bg-light border-bottom mb-3">
+  <div class="bg-light border-bottom">
+  <header class="container">
     <nav class="d-flex justify-content-between align-items-center py-2">
       <div class="breadcrumbs">
         <ul class="list-unstyled d-flex align-items-center">
@@ -42,7 +43,7 @@
       </div>
     </nav>
   </header>
-
+</div>
 
   <div id="content" class="container">
     <div class="form-container mt-4 bg-light border rounded">
