--- a/courses/templates/projects/results.html
+++ b/courses/templates/projects/results.html
@@ -13,18 +13,12 @@
 
 {% if not is_authenticated %}
   <div class="alert alert-info" role="alert">
-    <p>Please <a href="{% url 'login' %}">log in</a> to see the projects you need to evaluate.</p>
+    <p>Please <a href="{% url 'login' %}">log in</a> to see the results of your projects.</p>
   </div>
 {% else %}
-  <div class="list-group">
-    {% for review in reviews %}
-      <a href="{% url 'projects_eval_submit' course_slug=course.slug project_slug=project.slug review_id=review.id %}" class="list-group-item list-group-item-action">
-        Evaluate: {{ review.submission_under_evaluation.enrollment.display_name }}'s Submission
-        <span class="badge badge-primary badge-pill">Review State: {{ review.get_state_display }}</span>
-      </a>
-    {% endfor %}
+  <div>
+    
   </div>
-
 {% endif %}
 
 {% endblock %}
