--- a/courses/templates/projects/results.html
+++ b/courses/templates/projects/results.html
@@ -9,15 +9,55 @@
 
 {% block content %}
 
-<h2 class="mb-3 text-center">Projects to evaluate for {{ project.title }} for <a href="{% url 'course' course.slug %}">{{ course.title }}</a></h2>
+<h2 class="mb-3 text-center">Results for {{ project.title }}</h2>
 
 {% if not is_authenticated %}
   <div class="alert alert-info" role="alert">
     <p>Please <a href="{% url 'login' %}">log in</a> to see the results of your projects.</p>
   </div>
 {% else %}
-  <div>
-    
+
+  <div class="card mt-4">
+    <div class="card-body">
+      <ul>
+        <li>Total score: {{ submission.total_score }}</li>
+        <li>Project link: <a href="{{ submission.github_link }}">{{ submission.github_link }}</a></li>
+        <li>Commit ID: {{ submission.commit_id }}</li>
+        <li>Submitted at: {{ submission.submitted_at }}</li>
+        <li>Reviewed enough peers: {{ submission.reviewed_enough_peers|yesno:"Yes,No" }}</li>
+        <li>Status: {{ submission.passed|yesno:"Passed,Failed" }}</li>  
+      </ul>
+      
+      <div class="mt-4">
+        <h2>Scores Breakdown:</h2>
+        {% for score in scores %}
+        <div>
+          <strong>{{ score.review_criteria.description }}:</strong>
+          <ul>
+            {% for option in score.review_criteria.options %}
+             <li>{{ option.criteria }} ({{ option.score }} points)</li>
+            {% endfor %}
+          </ul>
+          <p>Score Received: {{ score.score }}</p>
+        </div>
+        {% endfor %}
+      </div>
+
+      <div class="mt-4">
+        <p><strong>Score Components:</strong></p>
+        <ul>
+          <li>Project score: {{ submission.project_score }}</li>
+          <li>Peer review score: {{ submission.peer_review_score }}</li>
+          <li>Learning in public (project): {{ submission.project_learning_in_public_score }}</li>
+          <li>Learning in public (peer review): {{ submission.peer_review_learning_in_public_score }}</li>
+          <li>FAQ contribution score: {{ submission.project_faq_score }}</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="text-center">
+    Back to <a href="{% url 'course' course.slug %}">{{ course.title }}</a>
   </div>
 {% endif %}
 
