--- a/courses/templates/courses/course.html
+++ b/courses/templates/courses/course.html
@@ -24,16 +24,17 @@
 </div>
 
 
-{% if is_authenticated %}
+{% if is_authenticated and course.first_homework_scored %}
 <div class="alert alert-info" role="alert">
   <p>Total score: {{ total_score }}</p>
 </div>
 {% endif %}
 
+{% if homeworks %}
 <div class="pb-3">
-<h2>Homework</h2>
+  <h2>Homework</h2>
 
-{% for hw in homeworks %}
+  {% for hw in homeworks %}
   <div class="p-2 {% cycle 'bg-white' '' %}">
     <div class="row align-items-center">
       <div class="col-5">
@@ -59,7 +60,9 @@
   </div>
   {% endfor %}
 </div>
+{% endif %}
 
+{% if projects %}
 <div class="pb-3">
   <h2>Projects</h2>
   {% for project in projects %}
@@ -94,16 +97,22 @@
       </div>
     </div>
   </div>
-  {% empty %}
-  <div class="alert alert-secondary" role="alert">
-    No projects available yet.
-  </div>
   {% endfor %}
 </div>
+{% endif %}
+
+
+{% if not homeworks and not projects %}
+<div class="alert alert-info" role="alert">
+  <p>There are no homeworks or projects available for this course yet. Come back later.</p>
+</div>
+{% endif %}
+
 
 <script>
   $(function() {
     $('[data-toggle="tooltip"]').tooltip()
   })
 </script>
+
 {% endblock %}
