--- a/courses/templates/courses/enrollment.html
+++ b/courses/templates/courses/enrollment.html
@@ -10,8 +10,15 @@
     {% csrf_token %}
     {{ form.as_p }}
 
-    <p>Display name appears on the leaderboard, is an auto-generated random name. You can edit it to be a nickname, or your real name.</p>
-    <p>Certificate name should be your actual name that you want to appear on your certificate</p>
+    <p>
+      Display name appears on the leaderboard, is an auto-generated
+      random name. You can edit it to be a nickname, or your real
+      name.</p>
+    <p>
+      Certificate name should be your actual name that you want to
+      appear on your certificate. If you don't set it, your
+      Display name will be used for the certificate.
+    </p>
 
     <button type="submit">Save Changes</button>
   </form>
